--- a/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
+++ b/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
@@ -1,10 +1,10 @@
 .component {
   overflow: visible;
   position: absolute;
-  right: 184px;
+  right: 204px;
 
   &.hasTadaIcon {
-    right: 242px;
+    right: 262px;
   }
 
   &:hover {
